# raychess

./: .gitignore  CMakeLists.txt  check-leak.sh  generate-asset-imports.py  readme.md
assets/pixel-chess/16x16/: BlackPieces.png.import  WhitePieces.png.import
src/: Chess.c  Chess.h  Const.h  Error.h  Log.h  Main.c  Resources.c  Resources.h
